# iz-sql-utilities

./: .gitignore  CMakeLists.txt  IzSQLUtilitiesConfig.cmake  README.md
include/IzSQLUtilities/: AbstractSQLModel.h  IzSQLUtilities_Enums.h  IzSQLUtilities_Global.h  SQLConnector.h  SQLDataContainer.h  SQLErrorEvent.h  SQLErrorInterpreterA2.h  SQLFunctions.h  SQLListModel.h  SQLModel.h  SQLProxyModel.h  SQLQueryBuilder.h  SQLRow.h  SQLTableModel.h  SQLTableProxyModel.h  SQLdbc.h
private/: AbstractSQLModel.cpp  LoadedSQLData.cpp  LoadedSQLData.h  SQLConnector.cpp  SQLData.cpp  SQLData.h  SQLDataContainer.cpp  SQLDataLoader.cpp  SQLDataLoader.h  SQLElement.cpp  SQLElement.h  SQLErrorInterpreterA2.cpp  SQLErrorMessage.cpp  SQLErrorMessage.h  SQLFunctions.cpp  SQLJoinElement.cpp  SQLJoinElement.h  SQLListModel.cpp  SQLModel.cpp  SQLOrderByElement.cpp  SQLOrderByElement.h  SQLProxyModel.cpp  SQLQueryBuilder.cpp  SQLResponseEvent.cpp  SQLResponseEvent.h  SQLRow.cpp  SQLSelectElement.cpp  SQLSelectElement.h  SQLTable.cpp  SQLTable.h  SQLTableModel.cpp  SQLTableProxyModel.cpp  SQLTopElement.cpp  SQLTopElement.h  SQLWhereElement.cpp  SQLWhereElement.h  SQLdbc.cpp
